--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="flex direction-column max-height">
+<html lang="en" class="flex direction-column max-height">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
@@ -25,33 +25,51 @@
         class="submenu absolute max-height flex direction-column justify-center align-center"
       >
         <button
-          class="actions white-text max-width no-border text-shadow dark-blue"
+          class="actions white-text max-width no-border text-shadow black"
           id="fifteen-minutes"
         >
           15'
         </button>
         <button
-          class="actions white-text max-width no-border text-shadow dark-blue"
+          class="actions white-text max-width no-border text-shadow black"
           id="twenty-minutes"
         >
           20'
         </button>
         <button
-          class="actions white-text max-width no-border text-shadow dark-blue"
+          class="actions white-text max-width no-border text-shadow black"
           id="play"
         >
           ▶
         </button>
         <button
-          class="actions white-text max-width no-border text-shadow dark-blue"
+          class="actions white-text max-width no-border text-shadow black"
           id="reset"
         >
           🔁
         </button>
       </div>
+      <div
+        class="submenu2 absolute max-height flex direction-column justify-center align-center"
+      >
+        <button
+          class="actions white-text max-width no-border text-shadow black"
+          id="add"
+        >
+          Add
+        </button>
+        <button
+          class="actions white-text max-width no-border text-shadow black"
+          id="delete"
+        >
+          Delete
+        </button>
+      </div>
     </div>
-    <div class="main-container flex wrap max-width">
-      <div class="teams relative flex justify-center align-center red">
+    <main class="main-container flex wrap max-width">
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center red"
+      >
         <div
           data-value="red"
           class="change-scores flex absolute max-width max-height invisible"
@@ -61,7 +79,9 @@
         </div>
         <span class="score white-text">0</span>
       </div>
-      <div class="teams relative flex justify-center align-center yellow">
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center yellow"
+      >
         <div
           data-value="yellow"
           class="change-scores flex absolute max-width max-height invisible"
@@ -71,7 +91,9 @@
         </div>
         <span class="score">0</span>
       </div>
-      <div class="teams relative flex justify-center align-center blue">
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center blue"
+      >
         <div
           data-value="blue"
           class="change-scores flex absolute max-width max-height invisible"
@@ -81,7 +103,9 @@
         </div>
         <span class="score white-text">0</span>
       </div>
-      <div class="teams relative flex justify-center align-center purple">
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center purple"
+      >
         <div
           data-value="purple"
           class="change-scores flex absolute max-width max-height invisible"
@@ -91,7 +115,9 @@
         </div>
         <span class="score white-text">0</span>
       </div>
-      <div class="teams relative flex justify-center align-center green">
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center green"
+      >
         <div
           data-value="green"
           class="change-scores flex absolute max-width max-height invisible"
@@ -101,7 +127,9 @@
         </div>
         <span class="score white-text">0</span>
       </div>
-      <div class="teams relative flex justify-center align-center orange">
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center orange"
+      >
         <div
           data-value="orange"
           class="change-scores flex absolute max-width max-height invisible"
@@ -111,6 +139,42 @@
         </div>
         <span class="score white-text">0</span>
       </div>
-    </div>
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center pink"
+      >
+        <div
+          data-value="pink"
+          class="change-scores flex absolute max-width max-height invisible"
+        >
+          <div class="left-side max-height"></div>
+          <div class="right-side max-height"></div>
+        </div>
+        <span class="score white-text">0</span>
+      </div>
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white"
+      >
+        <div
+          data-value="white"
+          class="change-scores flex absolute max-width max-height invisible"
+        >
+          <div class="left-side max-height"></div>
+          <div class="right-side max-height"></div>
+        </div>
+        <span class="score">0</span>
+      </div>
+      <div
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center black"
+      >
+        <div
+          data-value="black"
+          class="change-scores flex absolute max-width max-height invisible"
+        >
+          <div class="left-side max-height"></div>
+          <div class="right-side max-height"></div>
+        </div>
+        <span class="score white-text">0</span>
+      </div>
+    </main>
   </body>
 </html>
