Add functionality to add teams

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <main class="main-container flex wrap max-width">
       <div
-        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center red"
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white-text red"
       >
         <div
           data-value="red"
@@ -77,7 +77,7 @@
           <div class="left-side max-height"></div>
           <div class="right-side max-height"></div>
         </div>
-        <span class="score white-text">0</span>
+        <span class="score">0</span>
       </div>
       <div
         class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center yellow"
@@ -92,7 +92,7 @@
         <span class="score">0</span>
       </div>
       <div
-        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center blue"
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white-text blue"
       >
         <div
           data-value="blue"
@@ -101,10 +101,10 @@
           <div class="left-side max-height"></div>
           <div class="right-side max-height"></div>
         </div>
-        <span class="score white-text">0</span>
+        <span class="score">0</span>
       </div>
       <div
-        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center purple"
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white-text purple"
       >
         <div
           data-value="purple"
@@ -113,10 +113,10 @@
           <div class="left-side max-height"></div>
           <div class="right-side max-height"></div>
         </div>
-        <span class="score white-text">0</span>
+        <span class="score">0</span>
       </div>
       <div
-        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center green"
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white-text green"
       >
         <div
           data-value="green"
@@ -125,10 +125,10 @@
           <div class="left-side max-height"></div>
           <div class="right-side max-height"></div>
         </div>
-        <span class="score white-text">0</span>
+        <span class="score">0</span>
       </div>
       <div
-        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center orange"
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white-text orange"
       >
         <div
           data-value="orange"
@@ -137,10 +137,10 @@
           <div class="left-side max-height"></div>
           <div class="right-side max-height"></div>
         </div>
-        <span class="score white-text">0</span>
+        <span class="score">0</span>
       </div>
       <div
-        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center pink"
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white-text pink"
       >
         <div
           data-value="pink"
@@ -149,7 +149,7 @@
           <div class="left-side max-height"></div>
           <div class="right-side max-height"></div>
         </div>
-        <span class="score white-text">0</span>
+        <span class="score">0</span>
       </div>
       <div
         class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white"
@@ -164,7 +164,7 @@
         <span class="score">0</span>
       </div>
       <div
-        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center black"
+        class="width-by-three height-by-three medium-fontsize relative flex justify-center align-center white-text black"
       >
         <div
           data-value="black"
@@ -173,7 +173,7 @@
           <div class="left-side max-height"></div>
           <div class="right-side max-height"></div>
         </div>
-        <span class="score white-text">0</span>
+        <span class="score">0</span>
       </div>
     </main>
   </body>
