Add customizable timers

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="white text-center"
+                    class="input-form white text-center"
                     id="f-minutes"
                     value="15"
                     type="number"
@@ -126,7 +126,7 @@
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="white text-center"
+                    class="input-form white text-center"
                     id="f-seconds"
                     value="0"
                     type="number"
@@ -144,7 +144,7 @@
               <div class="input-form-container flex align-center">
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="white text-center"
+                    class="input-form white text-center"
                     id="s-minutes"
                     value="20"
                     type="number"
@@ -155,7 +155,7 @@
                 </div>
                 <div class="subcontainer-form flex column align-center">
                   <input
-                    class="white text-center"
+                    class="input-form white text-center"
                     id="s-seconds"
                     value="0"
                     type="number"
@@ -176,7 +176,7 @@
               <div class="flex align-center">
                 <input
                   disabled
-                  class="white text-center disabled"
+                  class="input-form white text-center disabled"
                   id="w-points"
                   value="0"
                   min="1"
@@ -200,7 +200,7 @@
               <div class="flex align-center">
                 <input
                   disabled
-                  class="white text-center disabled"
+                  class="input-form white text-center disabled"
                   id="t-points"
                   value="0"
                   min="1"
@@ -216,7 +216,7 @@
               <div class="flex column">
                 <textarea
                   disabled
-                  class="disabled unresizable white"
+                  class="disabled max-width unresizable white"
                   id="message"
                 ></textarea>
                 <label for="message" class="disabled small-fontsize"
