--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     value="15"
                     type="number"
                     min="0"
-                    max="999"
+                    max="99"
                   />
                   <label for="f-minutes" class="small-fontsize">Minutes</label>
                 </div>
@@ -131,7 +131,7 @@
                     value="0"
                     type="number"
                     min="0"
-                    max="999"
+                    max="99"
                   />
                   <label for="f-seconds" class="small-fontsize">Seconds</label>
                 </div>
@@ -149,7 +149,7 @@
                     value="20"
                     type="number"
                     min="0"
-                    max="999"
+                    max="99"
                   />
                   <label for="s-minutes" class="small-fontsize">Minutes</label>
                 </div>
@@ -160,7 +160,7 @@
                     value="0"
                     type="number"
                     min="0"
-                    max="999"
+                    max="99"
                   />
                   <label for="s-seconds" class="small-fontsize">Seconds</label>
                 </div>
@@ -186,6 +186,7 @@
                 <label
                   class="subtitle-side small-fontsize disabled"
                   for="w-points"
+                  id="label-w-points"
                   >Points</label
                 >
               </div>
@@ -210,6 +211,7 @@
                 <label
                   class="subtitle-side small-fontsize disabled"
                   for="t-points"
+                  id="label-t-points"
                   >Points</label
                 >
               </div>
