Activate and disable modes

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
           <section class="line">
             <div class="container-section flex column justify-center">
               <div class="subcontainer-form flex align-center">
-                <input id="winner" type="checkbox" />
+                <input id="winner" type="checkbox" class="mode" />
                 <label for="winner">Winner mode</label>
               </div>
               <div class="flex align-center">
@@ -178,7 +178,7 @@
                   disabled
                   class="input-form white text-center disabled"
                   id="w-points"
-                  value="0"
+                  value="20"
                   min="1"
                   max="999"
                   type="number"
@@ -195,7 +195,7 @@
           <section class="line">
             <div class="container-section flex column justify-center">
               <div class="subcontainer-form flex align-center">
-                <input id="total" type="checkbox" />
+                <input id="total" type="checkbox" class="mode"/>
                 <label for="total">Total mode</label>
               </div>
               <div class="flex align-center">
@@ -203,7 +203,7 @@
                   disabled
                   class="input-form white text-center disabled"
                   id="t-points"
-                  value="0"
+                  value="7"
                   min="1"
                   max="999"
                   type="number"
