Add winner mode

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           <section class="line">
             <div class="container-section flex column justify-center">
               <div class="subcontainer-form flex align-center">
-                <input id="total" type="checkbox" class="mode"/>
+                <input id="total" type="checkbox" class="mode" />
                 <label for="total">Total mode</label>
               </div>
               <div class="flex align-center">
@@ -220,8 +220,10 @@
                   disabled
                   class="disabled max-width unresizable white"
                   id="message"
-                ></textarea>
-                <label for="message" class="disabled small-fontsize"
+                >
+                  The total score has been reached...
+                </textarea>
+                <label for="message" id="label-message" class="disabled small-fontsize"
                   >Custom text</label
                 >
               </div>
