Change finish sound

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                   class="disabled max-width unresizable white"
                   id="message"
                 >
-                  The total score has been reached...
+                  Milestone achieved!
                 </textarea>
                 <label for="message" id="label-message" class="disabled small-fontsize"
                   >Custom text</label
