Change checkbox and delete spinboxes

--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
           <section class="line">
             <div class="container-section flex column justify-center">
               <div class="subcontainer-form flex align-center">
-                <input id="winner" type="checkbox" class="mode" />
+                <input id="winner" type="checkbox" class="mode light-red hidden-webstyles" />
                 <label for="winner">Winner mode</label>
               </div>
               <div class="flex align-center">
                 <input
                   disabled
-                  class="input-form white text-center disabled"
+                  class="input-form white text-center disabled "
                   id="w-points"
                   value="20"
                   min="1"
@@ -195,7 +195,7 @@
           <section class="line">
             <div class="container-section flex column justify-center">
               <div class="subcontainer-form flex align-center">
-                <input id="total" type="checkbox" class="mode" />
+                <input id="total" type="checkbox" class="mode light-red hidden-webstyles" />
                 <label for="total">Total mode</label>
               </div>
               <div class="flex align-center">
@@ -218,10 +218,9 @@
               <div class="flex column">
                 <textarea
                   disabled
-                  class="disabled max-width unresizable white"
+                  class="disabled max-width unresizable white text-left"
                   id="message"
-                >
-                  Milestone achieved!
+                >Milestone achieved!
                 </textarea>
                 <label for="message" id="label-message" class="disabled small-fontsize"
                   >Custom text</label
